# gestion_ruta

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: streamlit_app.py
data/: clientes.csv  historico_demanda.csv  matriz_distancias_clientes.csv  sucursales.csv
docs/: articulo_linkedin.docx  articulo_linkedin.html  articulo_web.html
notebooks/: 01_ruteo_multinivel.ipynb
scripts/: build_docx.py  build_notebook.py
src/: __init__.py  benchmark.py  clustering.py  data.py  demand.py  dp_approx.py  dp_exact.py  visualize.py
